# wasm-log-flex

./: Cargo.toml  README.md
.github/workflows/: build.yml
collectors/wlf-binlog-collector/: Cargo.toml
collectors/wlf-binlog-collector/src/: error.rs  lib.rs  sql_analyzer.rs
demos/: Cargo.toml
demos/env/: mysql_table_kafka.docker-compose.yaml
demos/src/: lib.rs
dispatchers/wlf-elasticsearch-dispatcher/: Cargo.toml
dispatchers/wlf-elasticsearch-dispatcher/src/: lib.rs
dispatchers/wlf-kafka-dispatcher/: Cargo.toml
dispatchers/wlf-kafka-dispatcher/src/: lib.rs
dispatchers/wlf-redis-dispatcher/: Cargo.toml
dispatchers/wlf-redis-dispatcher/src/: lib.rs
examples/: binlog_to_kafka_redis.docker-compose.yaml  binlog_to_kafka_redis.yaml  binlog_to_kafka_redis_es.docker-compose.yaml  binlog_to_kafka_redis_es.yaml  config.properties
src/: event.rs  event_hub.rs  events.rs  lib.rs
src/collectors/: binlog_collector.rs  mod.rs
src/dispatchers/: kafka_mysql_table_dispatcher.rs  mod.rs
src/transformers/: binlog_parser.rs  mod.rs
transformers/wlf-binlog-filter/: Cargo.toml
transformers/wlf-binlog-filter/src/: lib.rs
transformers/wlf-binlog-parser/: Cargo.toml
transformers/wlf-binlog-parser/src/: lib.rs
transformers/wlf-event-replicator/: Cargo.toml
transformers/wlf-event-replicator/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs  test_utils.rs
wlf-aio/: Cargo.toml
wlf-aio/src/: config.rs  main.rs
wlf-core/: Cargo.toml
wlf-core/src/: event.rs  event_hub.rs  event_router.rs  lib.rs  value.rs
