[workspace]
members = [
  "wlf-core",
  # collectors
  "collectors/wlf-binlog-collector",
  # transformers
  "transformers/wlf-binlog-filter",
  # dispatchers
  "dispatchers/wlf-kafka-dispatcher",
  "dispatchers/wlf-redis-dispatcher",
  # others
  "demos",
  "utils",
]

[patch.crates-io]
mysql_cdc = { git = 'https://github.com/markcty/mysql_cdc' }
