[workspace]
members = [
  "wlf-core",
  # collectors
  "collectors/wlf-binlog-collector",
  # transformers
  "transformers/wlf-binlog-filter",
  "transformers/wlf-event-replicator",
  # dispatchers
  "dispatchers/wlf-kafka-dispatcher",
  "dispatchers/wlf-redis-dispatcher",
  "dispatchers/wlf-elasticsearch-dispatcher",
  # others
  "utils",
  "wlf-aio",
]

[patch.crates-io]
mysql_cdc = { git = 'https://github.com/markcty/mysql_cdc' }
elasticsearch = { git = 'https://github.com/markcty/elasticsearch-rs.git' }
