[package]
name = "demos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wlf-core = { path = "../wlf-core" }
wlf-binlog-collector = { path = "../collectors/wlf-binlog-collector" }
wlf-binlog-filter = { path = "../transformers/wlf-binlog-filter" }
wlf-kafka-dispatcher = { path = "../dispatchers/wlf-kafka-dispatcher" }
tokio_wasi = { version = "1", features = [
  "rt",
  "time",
  "test-util",
  "macros",
  "io-util",
] }
futures-core = { version = "0.3", default-features = false }
tracing-subscriber = "0.3.17"
