[package]
name = "wlf-aio"
version = "0.1.0"
edition = "2021"

[dependencies]
wlf-core = { path = "../wlf-core" }
wlf-binlog-collector = { path = "../collectors/wlf-binlog-collector" }
wlf-binlog-filter = { path = "../transformers/wlf-binlog-filter" }
wlf-event-replicator = { path = "../transformers/wlf-event-replicator" }
wlf-kafka-dispatcher = { path = "../dispatchers/wlf-kafka-dispatcher" }
wlf-redis-dispatcher = { path = "../dispatchers/wlf-redis-dispatcher" }
tokio_wasi = { version = "1", features = [
  "rt",
  "time",
  "test-util",
  "macros",
  "io-util",
] }
futures-core = { version = "0.3", default-features = false }
tracing-subscriber = "0.3.17"
clap = { version = "4.3.15", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.24"
tracing = "0.1.37"
