[package]
name = "wlf-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.26"
dyn-clone = "1.0.11"
flume = "0.10.14"
thiserror = "1.0.40"
tokio_wasi = { version = "1", features = ["rt", "time", "test-util", "macros"] }
tracing = "0.1.37"
