[package]
name = "wlf-binlog-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wlf-core = { path = "../../wlf-core" }
utils = { path = "../../utils" }
tokio_wasi = { version = "1", features = [
  "rt",
  "time",
  "test-util",
  "macros",
  "io-util",
] }
mysql_cdc = "0.2.0"
thiserror = "1.0.40"
tracing = "0.1.37"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3.28" }
chrono = "0.4.26"
sqlparser = { version = "0.35.0", features = ["visitor"] }
serde_json = "1.0.99"
