[package]
name = "wlf-elasticsearch-dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wlf-core = { path = "../../wlf-core" }
tokio_wasi = { version = "1", features = [
  "rt",
  "time",
  "test-util",
  "macros",
], default-features = false }
tracing = "0.1.37"
thiserror = "1.0.40"
serde_json = "1.0.99"
utils = { path = "../../utils" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.68"
elasticsearch = "8.6.0-alpha.1"
