[package]
name = "wlf-kafka-dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wlf-core = { path = "../../wlf-core" }
tokio_wasi = { version = "1", features = ["rt", "time", "test-util", "macros"] }
tracing = "0.1.37"
rskafka_wasi = "0.3.1"
thiserror = "1.0.40"
serde_json = "1.0.99"
chrono = "0.4.26"
regex = "1.8.4"
