[package]
name = "wlf-redis-dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wlf-core = { path = "../../wlf-core" }
tokio_wasi = { version = "1", features = ["rt", "time", "test-util", "macros"] }
redis_wasi = { version = "0.22.3", features = ["tokio-comp", "json"] }
thiserror = "1.0.40"
utils = { path = "../../utils" }
tracing = "0.1.37"
serde_json = "1.0.99"

[dev-dependencies]
tracing-subscriber = "0.3.17"
